--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/share_study?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: cry020114
+    password:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
@@ -47,7 +47,7 @@ mybatis-plus:
 tencent:
   cos:
     file:
-      region: 
+      region:
       secret-id: 
       secret-key: 
       bucket-name: 
